Fixing navbar alignment

--- a/lib-core/sass/core/_root-element.sass
+++ b/lib-core/sass/core/_root-element.sass
@@ -12,6 +12,6 @@
   outline: none
   margin-bottom: $space
   @if $size != 1
-    font-size: #{$size}rem
-  line-height: $size * $default-line-height
+    font-size: $size*$default-font-size
+  line-height: $size*$default-line-height
   font-family: $default-font-family
